# modern-loki

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_small_obj.cpp
docs/: abstract_factory.md  assoc_vector.md  factory.md  functor.md  hierarchy_generators.md  loki.md  multi_methods.md  singleton.md  small_obj.md  smart_ptr.md  threads.md  type_traits.md  typelist.md  visitor.md
include/loki/: abstract_factory.hpp  assoc_vector.hpp  factory.hpp  functor.hpp  hierarchy_generators.hpp  loki.cppm  loki.hpp  multi_methods.hpp  singleton.hpp  small_obj.hpp  smart_ptr.hpp  threads.hpp  type_traits.hpp  typelist.hpp  visitor.hpp
scripts/: test_docs.py
tests/: CMakeLists.txt  test_abstract_factory.cpp  test_assoc_vector.cpp  test_factory.cpp  test_functor.cpp  test_hierarchy_generators.cpp  test_multi_methods.cpp  test_singleton.cpp  test_small_obj.cpp  test_smart_ptr.cpp  test_threads.cpp  test_type_traits.cpp  test_typelist.cpp  test_visitor.cpp
